--- a/styles/global.css
+++ b/styles/global.css
@@ -24,8 +24,6 @@
 }
 
 body{
-  overflow: hidden;
-
   font: var(--text);
   color: var(--text-secondary);
 }
